# TicTacToeQt5OpenGL

./: CMakeLists.txt
resources/: resources.qrc
resources/shaders/: fshader.glsl  vshader.glsl
src/: FieldModel.cpp  FieldModel.h  FieldWidget.cpp  FieldWidget.h  GameEngine.cpp  GameEngine.h  GameWindow.cpp  GameWindow.h  Mesh.cpp  Mesh.h  Square.cpp  Square.h  gameEngine.cpp  gameEngine.h  gameField.cpp  gameField.h  gameWidget.cpp  gameWidget.h  glwidget.cpp  glwidget.h  main.cpp  mesh.cpp  mesh.h  square.cpp  square.h  window.cpp  window.h
